Python/HOMEWORK/2nd_Session/Answers/4/Kiana.gh198@gmail.com/result.txt
------------- user information -------------
identity: 
username: Kianaa
full name: Kianaa
email address: Kiana.gh198@gmail.com
------------- result -------------
problem name: سوال ۴
state: داوری شد
short judge result: خطای نحوی
penalty: 100%
judge score: 0
judge score with delay: 0
instructor score: not set yet.
------------- judge log -------------

Starting tester...
type = compile-only
Checking Python Syntax
Syntax checked. Exit Code=1  Execution Time: 66 ms
Syntax Error
  File "6911585.py3", line 1
    Python 3.9.6 (tags/v3.9.6:db3ff76, Jun 28 2021, 15:26:21) [MSC v.1929 64 bit (AMD64)] on win32
           ^
SyntaxError: invalid syntax

Total Execution Time: 259 ms

